--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="css/style.css">
+
     <title>Document</title>
+
 </head>
 
 
@@ -14,7 +17,7 @@
 <body>
 
 
-
+<img src="" alt="" width="">
 
 
 </body>
